--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -4,8 +4,10 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
-    // font-family: Font name here;
+    font-family: 'Exo', sans-serif;
+    font-family: 'PT Sans', sans-serif;
 }
